k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faceit-ingress
  namespace: faceit-prod
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pattmsc.online
    - pattcs.pro
    - pattmsc.ru
    secretName: faceit-tls
  rules:
  - host: pattmsc.online
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: faceit-api
            port:
              number: 8000
  - host: pattcs.pro
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: faceit-api
            port:
              number: 8000
  - host: pattmsc.ru
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: faceit-api
            port:
              number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faceit-web-ingress
  namespace: faceit-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "30"
    nginx.ingress.kubernetes.io/limit-rps: "30"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pattmsc.online
    - pattcs.pro
    - pattmsc.ru
    secretName: faceit-tls
  rules:
  - host: pattmsc.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faceit-web
            port:
              number: 3000
  - host: pattcs.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faceit-web
            port:
              number: 3000
  - host: pattmsc.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faceit-web
            port:
              number: 3000
